Replace base64 encoder